--- a/bfil_mrp/views/mrp_routing_workcenter_views_inherited.xml
+++ b/bfil_mrp/views/mrp_routing_workcenter_views_inherited.xml
@@ -7,6 +7,7 @@
         <field name="inherit_id" ref="mrp.mrp_routing_workcenter_tree_view"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='time_cycle']" position="after">
+                <field name="wc_cost_per_minute"/>
                 <field name="cost"/>
             </xpath>
         </field>
