ADDED THE UPDATED BFIL_MRP

--- a/bfil_mrp/views/mrp_routing_workcenter_views_inherited.xml
+++ b/bfil_mrp/views/mrp_routing_workcenter_views_inherited.xml
@@ -10,6 +10,11 @@
                 <field name="wc_cost_per_minute"/>
                 <field name="cost"/>
             </xpath>
+
+            <xpath expr="//field[@name='cost']" position="attributes">
+                <attribute name="sum">Total Duration</attribute>
+            </xpath>
+
         </field>
     </record>
 
