--- a/bfil_mrp/views/work_center.xml
+++ b/bfil_mrp/views/work_center.xml
@@ -1,36 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <record id="mrp_workcenter_view_inherited" model="ir.ui.view">
-        <field name="name">mrp.workcenter.inherited</field>
-        <field name="model">mrp.workcenter</field>
-        <field name="inherit_id" ref="mrp.mrp_workcenter_view"/>
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='code']" position="after">
-                <field name="user_id"/>
-            </xpath>
+        <record id="mrp_workcenter_view_inherited" model="ir.ui.view">
+            <field name="name">mrp.workcenter.inherited</field>
+            <field name="model">mrp.workcenter</field>
+            <field name="inherit_id" ref="mrp.mrp_workcenter_view"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='code']" position="after">
+                            <field name="user_id"/>
+                </xpath>
 
-            <xpath expr="//notebook" position="inside">
-                <page string="Cost per minute" name="general_info">
-                    <group>
-                        <group string="Cost Info" name="Cost Information">
-                            <field name="total_prod_capacity"/>
-                            <field name="rental_cost"/>
-                            <field name="labor_cost"/>
-                            <field name="common_area_cost"/>
+                <xpath expr="//notebook" position="inside">
+                    <page string="Cost Calculation" name="general_info">
+                        <group>
+                            <group string="Cost Info" name="Cost Information">
+                                <field name="total_prod_capacity"/>
+                                <field name="rental_cost"/>
+                                <field name="labor_cost"/>
+                                <field name="common_area_cost"/>
+                                <field name="other_costs"/>
+                            </group>
+
+                            <group string="Total cost" name="Cost Per Minute">
+                                <field name="cost_per_min"/>
+
+                            </group>
                         </group>
+                    </page>
 
-                        <group string="Total cost" name="Cost Per Minute">
-                            <field name="cost_per_min"/>
+                </xpath>
 
-                        </group>
-                    </group>
-                </page>
-
-            </xpath>
-
-        </field>
-    </record>
+            </field>
+        </record>
 
 
 </odoo>
